cloudformation/core-infrastructure.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Stack 2: Core App Infrastructure (Go API & ECR)'

Parameters:
  LBStackName:
    Type: String
    Default: portfolio-lb-stack
    Description: Name of your Load Balancer stack to import the SG from
  VpcId:
    Type: AWS::EC2::VPC::Id
  SubnetId:
    Type: AWS::EC2::Subnet::Id
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
  InstanceType:
    Type: String
    Default: t3.micro

Resources:
  # 1. Application Security Group
  PortfolioSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Go App Server (Trusts LB only)
      VPCId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0 # SSH access # should be changed to 'MY IP' after deployment.
        # only allow port 8080 from the load balancer (LB)
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: 
            Fn::ImportValue: !Sub "${LBStackName}-LBSecurityGroupId"

  # 2. IAM Configuration
  EC2ECRPullRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2ECRPullRole

  # 3. ECR Repository 
  PortfolioECRRepo:
    Type: AWS::ECR::Repository
    Properties:
      RepositoryName: myapp-repo

  # 4. App EC2 Instance
  PortfolioServer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      ImageId: ami-0914547665e6a707c # Stockholm (eu-north-1) Ubuntu AMI
      IamInstanceProfile: !Ref EC2InstanceProfile
      # assigning public ip to instances
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: '0'
          GroupSet: 
            - !Ref PortfolioSecurityGroup
          SubnetId: !Ref SubnetId
      Tags:
        - Key: Name
          Value: automated-portfolio-server

Outputs:
  ServerPublicIP:
    Value: !GetAtt PortfolioServer.PublicIp
  AppPrivateIP:
    Description: Private IP needed for Traefik to route traffic
    Value: !GetAtt PortfolioServer.PrivateIp
  ECRRepositoryUri:
    Value: !GetAtt PortfolioECRRepo.RepositoryUri

    # for deployment command to be used: ansible-playbook cloudformation/core-infrastructure.yml
